<resources>
    <string name="app_name">Almeirim Tour Guide</string>
    <string name="office_image_description">Tourism Office Icon</string>
    <string name="culture_image_description">Culture Icon</string>
    <string name="park_sport_image_description">Parks &amp; Sports</string>
    <string name="restaurants_image_description">Restaurants Icon</string>
    <string name="hotels_image_description">Hotels Icon</string>
    <string name="place_card_image">Place Card Image</string>
    <string name="address_icon">Address Icon</string>
    <string name="coordinates_icon">GPS Coordinates Icon</string>
    <string name="opening_hours_icon">Opening Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="website_url_icon">Website URL Icon</string>
    <string name="email_icon">E-Mail Icon</string>
    <string name="tourism_office_category">Tourism Office</string>
    <string name="culture_category">Culture</string>
    <string name="park_sport_category">Parks &amp; Sports</string>
    <string name="restaurant_category">Restaurants</string>
    <string name="hotel_category">Hotels</string>
    <string name="tourism_office_address">Rua Dionísio Saraiva\n2080&#8211;052 Almeirim</string>
    <string name="tourism_office_coordinates">39.208902, -8.628723</string>
    <string name="tourism_office_opening_hours_01">Monday to Friday:\n9h00 &#8211; 18:00</string>
    <string name="tourism_office_phone">243 594 107</string>
    <string name="tourism_office_title">Tourism Office</string>
    <string name="culture_000_address">Parque Alfredo Bento Calado\nAvenida 25 de Abril\n2080–094 Almeirim</string>
    <string name="culture_001_address">Rua Marechal Carmona\n2080–587 Fazendas de Almeirim</string>
    <string name="culture_002_address">Praça da Républica\n2080–044 Almeirim</string>
    <string name="culture_003_address">Rua Dionísio Saraiva\n2080–052 Almeirim</string>
    <string name="culture_004_address">Rua Conde da Taipa\n2080–126 Almeirim</string>
    <string name="culture_005_address">Centro Coordenador de Transportes Terrestres\nRua de Coruche\n2080–094 Almeirim</string>
    <string name="culture_006_address">Largo da Praça de Touros\n2080–030 Almeirim</string>
    <string name="culture_000_email">biblioteca@almeirim.pt</string>
    <string name="culture_001_email">actividadesculturais@cm-almeirim.pt</string>
    <string name="culture_002_email">actividadesculturais@cm-almeirim.pt</string>
    <string name="culture_005_email">museu@cm-almeirim.pt</string>
    <string name="culture_000_description">Para falarmos da actual biblioteca devemos recuar ao ano de 1937, mais precisamente o dia 25 de Novembro, data em que foi inaugurada a Biblioteca Pública de Almeirim, fruto da iniciativa do períodico "O Vale do Tejo" e a colaboração de alguns ilustres almeirinenses de boa vontade.</string>
    <string name="culture_001_description">O Centro Cultural da Vila de Fazendas de Almeirim inaugurado em 2016, com sala de exposições, cine-teatro, biblioteca no primeiro piso com parque de estacionamento</string>
    <string name="culture_002_description">O Cinema em Almeirim quando se radicou, em Almeirm, como um dos mais populares meios de diversão, nas primeiras décadas do século XX, foi um grande acontecimento.</string>
    <string name="culture_003_description">Inaugurada em Setembro de 2001, a Galeria Municipal funciona como um eixo de dinamização cultural, em estreita colaboração com o Posto de Turismo.</string>
    <string name="culture_004_description">A Igreja Matriz de Almeirim é datada de meados do século XVI. No seu interior, pode-se contemplar a famosa imagem do Senhor Jesus dos Paços.</string>
    <string name="culture_005_description">Tendo sido atribuída uma Menção Honrosa, na categoria de Melhor Museu Português, pela APOM, o Museu Municipal de Almeirim é um espaço de cultura e tradição onde pode viajar no tempo e redescobrir a história de um povo à beira Tejo plantado.</string>
    <string name="culture_006_description">Desde sempre com grandes tradições taurinas, Almeirim viu ser construída, em terrenos que pertencem à Quinta da Alorna, uma praça de toiros em madeira com capacidade para 3000 pessoas. Tendo sido inaugurada em 22 de Outubro de 1938 foi palco de várias corridas, demolida mais tarde para dar lugar a uma moderna construção com excelentes condições não só para os artistas mas também para o publico aficcionado.</string>
    <string name="culture_000_opening_hours_01">Monday to Friday:\n9:30 &#8211; 12:30 and 14:00 &#8211; 18:00 </string>
    <string name="culture_000_opening_hours_02">Second Saturday of each month:\n9:30 &#8211; 13:00</string>
    <string name="culture_001_opening_hours_01">One hour before the show\'s schedule</string>
    <string name="culture_002_opening_hours_01">One hour before the show\'s schedule</string>
    <string name="culture_003_opening_hours_01">Monday to Friday:\n9h00 &#8211; 18:00</string>
    <string name="culture_005_opening_hours_01">Tuesday to Friday:\n9h30 &#8211; 12:30 and 14:00 &#8211; 16:30</string>
    <string name="culture_000_phone">243 594 122</string>
    <string name="culture_005_phone">243 594 136</string>
    <string name="culture_006_phone">243 594 020</string>
    <string name="culture_000_title">Municipality Library</string>
    <string name="culture_001_title">Cultural Center of Fazendas de Almeirim</string>
    <string name="culture_002_title">Cine-Theater</string>
    <string name="culture_003_title">Municipality Art Gallery</string>
    <string name="culture_004_title">Matrice Church</string>
    <string name="culture_005_title">Municipality Museum</string>
    <string name="culture_006_title">Bullfight Arena</string>
    <string name="culture_005_website_url">http://museualmeirim.blogspot.com</string>
    <string name="hotel_000_address">Quinta do Variorum\nEstrada do Arneiro\nArneiro da Volta\n2080–074 Almeirim</string>
    <string name="hotel_001_address">Travessa do Calvário, 2\n2080–174 Almeirim</string>
    <string name="hotel_002_address">Rua Alfredo Godinho, 6\n2080–067 Almeirim</string>
    <string name="hotel_003_address">Rua de Timor, 4\n2080–103 Almeirim</string>
    <string name="hotel_004_address">Rua de Timor, 1\n2080–103 Almeirim</string>
    <string name="hotel_005_address">Almeirim\n2080–052 Almeirim</string>
    <string name="hotel_000_email">agroturismo@casadebesteiros.pt</string>
    <string name="hotel_001_email">reservas@hospedariaoabilio.com</string>
    <string name="hotel_004_email">geral@hotelonovoprincipe.com</string>
    <string name="hotel_005_email">reservas.quintagafaria@gmail.com</string>
    <string name="hotel_000_description">A Casa de Besteiros, de arquitectura ribatejana, com alpendres formados por arcos de volta inteira, é, pode afirmar-se, uma casa senhorial. Do amplo largo fronteiro à Casa desenvolve-se, a escadaria e a rampa de acesso ao patamar da porta principal, daqui já se pode apreciar o desafogo de vistas. </string>
    <string name="hotel_001_description">A Hospedaria Abílio está localizada no centro de Almeirim, apenas a 7 km de Santarém. Com uma situação geogŕafica priviligiada, com acesso fácil às principais vias rodoviária de todo o País.</string>
    <string name="hotel_002_description">A hospedaria Dom António é uma pousada modesta mas que aposta numa excelente relação qualidade preço.</string>
    <string name="hotel_003_description">Hospedaria associada ao restaurante do mesmo nome que serve diariamente a afamada sopa da pedra cuja lenda (e especialiade associada) é emblemática de Almeirim.</string>
    <string name="hotel_004_description">Com acesso Wi-Fi e estacionamento gratuitos, o Hotel O Novo Príncipe fica em Almeirim, uma cidade na zona rural perto do Rio Tejo. Dispõe de quartos modernos, uma recepção 24 horas e sala de jogos com mesas de bilhar.</string>
    <string name="hotel_005_description">A menos de uma hora de Lisboa em plena lezíria ribatejana e a curta distância das áreas urbanas de Santarém e Almeirim com os seus múltiplos serviços e pontos de interesse, dotada de habitações de elevada qualidade a um preço atrativo com todos os serviços e comodidades como ar condicionado e acesso sem fios à internet.</string>
    <string name="hotel_001_opening_hours_01">Todos os dias:\n09:00 &#8211; 24:00</string>
    <string name="hotel_004_opening_hours_01">Aberto 24</string>
    <string name="hotel_000_phone">243 595 474</string>
    <string name="hotel_001_phone">243 592 602</string>
    <string name="hotel_002_phone">243 593 263</string>
    <string name="hotel_003_phone">243 592 057</string>
    <string name="hotel_004_phone">243 570 600</string>
    <string name="hotel_005_phone">919 762 584</string>
    <string name="hotel_001_subtitle">Confort and quality at your service</string>
    <string name="hotel_005_subtitle">A unique experience of tourism in a rural area</string>
    <string name="hotel_000_title">Casa de Besteiros</string>
    <string name="hotel_001_title">Hostel Abílio</string>
    <string name="hotel_002_title">Hostel Dom António</string>
    <string name="hotel_003_title">Hostel O Minhoto</string>
    <string name="hotel_004_title">Hotel O Novo Príncipe</string>
    <string name="hotel_005_title">Quinta da Gafaria</string>
    <string name="hotel_000_website_url">www.casadebesteiros.pt</string>
    <string name="hotel_001_website_url">www.hospedariaoabilio.com</string>
    <string name="hotel_004_website_url">http://hotelonovoprincipe.com</string>
    <string name="hotel_005_website_url">http://www.quintadagafaria.com</string>
    <string name="park_sport_000_address">Rua do Campo da Bola\n2080–147 Almeirim</string>
    <string name="park_sport_001_address">Av. D João I\n2080–014 Almeirim</string>
    <string name="park_sport_002_address">Praça da República\n2080–000 Almeirim</string>
    <string name="park_sport_003_address">Av. D João I\n2080–014 Almeirim</string>
    <string name="park_sport_004_address">Rua Condessa da Junqueira\n2080–069 Almeirim</string>
    <string name="park_sport_005_address">Av. D João I\n2080–014 Almeirim</string>
    <string name="park_sport_000_description">Circuito ideal para a prática de exercício ou para momentos de lazer ao ar livre.</string>
    <string name="park_sport_001_description">Um campo de futebol de 11 e um campo de futebol de 7, ambos com relva sintética.</string>
    <string name="park_sport_002_description">Fazia parte dos Largos que existiam em Almeirim, com o particular interesse de ter sido ali o Terreiro do Paço Real. Perdido o Paço, do qual ficou um Pórtico demolido em 1890, o terreno foi então transformado em Praça do Comércio, onde se comerciava, se realizavam festas populares e passeio público.</string>
    <string name="park_sport_003_description">A Zona Norte de Almeirim é uma das mais recentes requalificações urbanas de Almeirim. Toda uma área desaproveitada de pinhal foram completamente transformados numa bela zona verde, com uma grande área de relva, um Complexo de Ténis, Circuito de Manutenção, Skate Park, Mini Golf, um Parque Infantil e um Lago.</string>
    <string name="park_sport_004_description">Parque com excelentes condições e equipamentos, dos quais fazem parte campos de futebol, pista de atletismo e um pavilhão.</string>
    <string name="park_sport_005_description">No interior existem duas piscinas, uma de 25 metros, e um "chapinheiro". No exterior, 2 piscinas, uma grande com duas zonas distintas (uma de natação e outra de lazer) e uma pequena para bebés.</string>
    <string name="park_sport_005_opening_hours_01">Monday to Friday:\n8:00 &#8211; 21:30</string>
    <string name="park_sport_005_opening_hours_02">Saturday:\n8:00 &#8211; 18:00</string>
    <string name="park_sport_005_phone">243 594 130</string>
    <string name="park_sport_000_title">Sport Leisure Circuit</string>
    <string name="park_sport_001_title">Municipality Stadium</string>
    <string name="park_sport_002_title">Jardim da Républica</string>
</resources>