<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TourismOfficeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/place_card_image"
            android:src="@drawable/card_posto_turismo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/mp_horizontal_big"
            android:paddingLeft="@dimen/mp_horizontal_big"
            android:paddingTop="@dimen/mp_normal_vertical"
            android:paddingEnd="@dimen/mp_horizontal_big"
            android:paddingRight="@dimen/mp_horizontal_big"
            android:paddingBottom="@dimen/mp_normal_vertical"
            android:text="@string/tourism_office_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mp_vertical_big"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/address_icon"
                android:paddingStart="@dimen/mp_horizontal_big"
                android:paddingLeft="@dimen/mp_horizontal_big"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:src="@drawable/ic_map" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:text="@string/tourism_office_address"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mp_vertical_big"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/coordinates_icon"
                android:paddingStart="@dimen/mp_horizontal_big"
                android:paddingLeft="@dimen/mp_horizontal_big"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:src="@drawable/ic_place" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:text="@string/tourism_office_coordinates"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mp_vertical_big"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/opening_hours_icon"
                android:paddingStart="@dimen/mp_horizontal_big"
                android:paddingLeft="@dimen/mp_horizontal_big"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:src="@drawable/ic_access_time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:text="@string/tourism_office_opening_hours_01"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mp_vertical_big"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/phone_icon"
                android:paddingStart="@dimen/mp_horizontal_big"
                android:paddingLeft="@dimen/mp_horizontal_big"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/mp_horizontal_big"
                android:paddingRight="@dimen/mp_horizontal_big"
                android:text="@string/tourism_office_phone"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
